Fixed mistakes, multilingual model, confusion matrix

--- a/data_processing_cdp.ipynb
+++ b/data_processing_cdp.ipynb
@@ -487,6 +487,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Cities 2022    7119\n",
+       "Name: Questionnaire, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_csv['Questionnaire'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -2537,7 +2558,7 @@
    "source": [
     "# load fasttext language classification model\n",
     "# you can download it at https://fasttext.cc/docs/en/language-identification.html\n",
-    "language_model = fasttext.load_model('lid.176.bin')"
+    "language_model = fasttext.load_model('models/lid.176.bin')"
    ]
   },
   {
