--- a/data_processing_es.ipynb
+++ b/data_processing_es.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,6 +286,29 @@
     "# load csv as dataframe\n",
     "df_csv = pd.read_csv('csvs/es.csv', sep=',')\n",
     "df_csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Cities 2021    603\n",
+       "Cities 2019    602\n",
+       "Cities 2020    538\n",
+       "Name: Questionnaire Name, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_csv['Questionnaire Name'].value_counts()"
    ]
   },
   {
@@ -2171,7 +2194,7 @@
    "source": [
     "# load language classification model\n",
     "# you can download it at https://fasttext.cc/docs/en/language-identification.html\n",
-    "language_model = fasttext.load_model('lid.176.bin')"
+    "language_model = fasttext.load_model('models/id.176.bin')"
    ]
   },
   {
@@ -2937,7 +2960,7 @@
     }
    ],
    "source": [
-    "# trasnlate the texts to english\n",
+    "# translate the texts to english\n",
     "def translate_row(row, translate_client):\n",
     "    lang = row['lang']\n",
     "    if lang == 'en':\n",
