Use only public dataset

--- a/cross-validation_sentence-transformers.ipynb
+++ b/cross-validation_sentence-transformers.ipynb
@@ -94,50 +94,50 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>482</th>\n",
-       "      <td>water management</td>\n",
-       "      <td>restauracion de las cuencas de agua. se preten...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>483</th>\n",
+       "      <th>1300</th>\n",
        "      <td>energy effiency</td>\n",
-       "      <td>sustainable tourism development program in iga...</td>\n",
+       "      <td>decarbonisation of local authority maintained ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>484</th>\n",
+       "      <th>1301</th>\n",
+       "      <td>buildings</td>\n",
+       "      <td>charlotte &amp; william bloomberg public library. ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1302</th>\n",
+       "      <td>energy effiency</td>\n",
+       "      <td>bloomington green home improvement program. th...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1303</th>\n",
        "      <td>water management</td>\n",
-       "      <td>caminho das águas. o projeto prevê a a realiza...</td>\n",
+       "      <td>greater amman municipality (gam) - saqef al se...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>486</th>\n",
-       "      <td>waste management</td>\n",
-       "      <td>implantação do aterro sanitário em forma de co...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>488</th>\n",
+       "      <th>1304</th>\n",
        "      <td>water management</td>\n",
-       "      <td>proteção e recuperação de nascentes do ribeirã...</td>\n",
+       "      <td>estrategia hidrica local. herramienta local de...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1560 rows × 2 columns</p>\n",
+       "<p>1158 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 area                                         title+desc\n",
-       "0     energy effiency  intensity control of led light points for high...\n",
-       "1    waste management  instalación de planta trituradora de llantas. ...\n",
-       "2           transport  seguimiento y control ambiental a tecnologías ...\n",
-       "3    waste management  fortalecimiento programa de reciclaje inclusiv...\n",
-       "4    waste management  waste to energy project for blantyre city. reh...\n",
-       "..                ...                                                ...\n",
-       "482  water management  restauracion de las cuencas de agua. se preten...\n",
-       "483   energy effiency  sustainable tourism development program in iga...\n",
-       "484  water management  caminho das águas. o projeto prevê a a realiza...\n",
-       "486  waste management  implantação do aterro sanitário em forma de co...\n",
-       "488  water management  proteção e recuperação de nascentes do ribeirã...\n",
+       "                  area                                         title+desc\n",
+       "0      energy effiency  intensity control of led light points for high...\n",
+       "1     waste management  instalación de planta trituradora de llantas. ...\n",
+       "2            transport  seguimiento y control ambiental a tecnologías ...\n",
+       "3     waste management  fortalecimiento programa de reciclaje inclusiv...\n",
+       "4     waste management  waste to energy project for blantyre city. reh...\n",
+       "...                ...                                                ...\n",
+       "1300   energy effiency  decarbonisation of local authority maintained ...\n",
+       "1301         buildings  charlotte & william bloomberg public library. ...\n",
+       "1302   energy effiency  bloomington green home improvement program. th...\n",
+       "1303  water management  greater amman municipality (gam) - saqef al se...\n",
+       "1304  water management  estrategia hidrica local. herramienta local de...\n",
        "\n",
-       "[1560 rows x 2 columns]"
+       "[1158 rows x 2 columns]"
       ]
      },
      "execution_count": 3,
@@ -147,22 +147,20 @@
    ],
    "source": [
     "# run the same routine for the untranslated dataset\n",
-    "df_cdp_multi = pd.read_csv('csvs/cdp_clean.csv', sep=',').drop(columns=['Unnamed: 0'])\n",
-    "df_es_multi = pd.read_csv('csvs/es_clean.csv', sep=',').drop(columns=['Unnamed: 0'])\n",
-    "df_joined_multi = pd.concat([df_cdp_multi, df_es_multi], axis=0)[['area', 'title+desc']]\n",
+    "df_cdp_multi = pd.read_csv('csvs/cdp_clean.csv', sep=',').drop(columns=['Unnamed: 0'])[['area', 'title+desc']]\n",
     "\n",
-    "area_energy = (df_joined_multi['area'] == 'energy efficiency / retrofit') | (df_joined_multi['area'] == 'energy efficiency (including public lighting)')\n",
-    "df_joined_multi.loc[area_energy, 'area'] = 'energy effiency'\n",
+    "area_energy = (df_cdp_multi['area'] == 'energy efficiency / retrofit') | (df_cdp_multi['area'] == 'energy efficiency (including public lighting)')\n",
+    "df_cdp_multi.loc[area_energy, 'area'] = 'energy efficiency'\n",
     "\n",
-    "area_waste = df_joined_multi['area'] == 'waste management (including waste recycling)'\n",
-    "df_joined_multi.loc[area_waste, 'area'] = 'waste management'\n",
+    "area_waste = df_cdp_multi['area'] == 'waste management (including waste recycling)'\n",
+    "df_cdp_multi.loc[area_waste, 'area'] = 'waste management'\n",
     "\n",
     "min_sample_count = 100\n",
-    "area_count = pd.DataFrame(df_joined_multi.value_counts(subset='area')).rename(columns={0: 'sample_count'})\n",
+    "area_count = pd.DataFrame(df_cdp_multi.value_counts(subset='area')).rename(columns={0: 'sample_count'})\n",
     "area_count = area_count.rename({0: 'count'}, axis='columns')\n",
     "areas_to_keep = area_count[area_count > min_sample_count].dropna().index.to_list()\n",
-    "area_filter = df_joined_multi['area'].isin(areas_to_keep)\n",
-    "df_clean_multi = df_joined_multi[area_filter]\n",
+    "area_filter = df_cdp_multi['area'].isin(areas_to_keep)\n",
+    "df_clean_multi = df_cdp_multi[area_filter]\n",
     "df_clean_multi"
    ]
   },
@@ -186,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,33 +408,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "col: title+desc, model: labse, neurons: 28, epochs: 50, fold: 0, acc: 0.7853, time: 566\n",
-      "col: title+desc, model: labse, neurons: 28, epochs: 50, fold: 1, acc: 0.8205, time: 564\n",
-      "col: title+desc, model: labse, neurons: 28, epochs: 50, fold: 2, acc: 0.8205, time: 562\n",
-      "col: title+desc, model: labse, neurons: 28, epochs: 50, fold: 3, acc: 0.7340, time: 538\n",
-      "col: title+desc, model: labse, neurons: 28, epochs: 50, fold: 4, acc: 0.7564, time: 518\n",
-      "total time: 2769\n",
+      "col: title+desc, model: labse, neurons: 28, epochs: 50, fold: 0, acc: 0.8017, time: 430\n",
+      "col: title+desc, model: labse, neurons: 28, epochs: 50, fold: 1, acc: 0.7629, time: 421\n",
+      "col: title+desc, model: labse, neurons: 28, epochs: 50, fold: 2, acc: 0.7198, time: 401\n",
+      "col: title+desc, model: labse, neurons: 28, epochs: 50, fold: 3, acc: 0.7749, time: 394\n",
+      "col: title+desc, model: labse, neurons: 28, epochs: 50, fold: 4, acc: 0.7619, time: 388\n",
+      "total time: 2059\n",
       "\n",
-      "col: title+desc, model: duse, neurons: 24, epochs: 50, fold: 0, acc: 0.7885, time: 135\n",
-      "col: title+desc, model: duse, neurons: 24, epochs: 50, fold: 1, acc: 0.7917, time: 145\n",
-      "col: title+desc, model: duse, neurons: 24, epochs: 50, fold: 2, acc: 0.8205, time: 145\n",
-      "col: title+desc, model: duse, neurons: 24, epochs: 50, fold: 3, acc: 0.7404, time: 145\n",
-      "col: title+desc, model: duse, neurons: 24, epochs: 50, fold: 4, acc: 0.7724, time: 145\n",
-      "total time: 722\n",
+      "col: title+desc, model: duse, neurons: 24, epochs: 50, fold: 0, acc: 0.7931, time: 98\n",
+      "col: title+desc, model: duse, neurons: 24, epochs: 50, fold: 1, acc: 0.7672, time: 98\n",
+      "col: title+desc, model: duse, neurons: 24, epochs: 50, fold: 2, acc: 0.7284, time: 98\n",
+      "col: title+desc, model: duse, neurons: 24, epochs: 50, fold: 3, acc: 0.7922, time: 98\n",
+      "col: title+desc, model: duse, neurons: 24, epochs: 50, fold: 4, acc: 0.7532, time: 98\n",
+      "total time: 497\n",
       "\n",
-      "col: title+desc, model: minilm, neurons: 20, epochs: 50, fold: 0, acc: 0.7821, time: 115\n",
-      "col: title+desc, model: minilm, neurons: 20, epochs: 50, fold: 1, acc: 0.7917, time: 115\n",
-      "col: title+desc, model: minilm, neurons: 20, epochs: 50, fold: 2, acc: 0.8173, time: 115\n",
-      "col: title+desc, model: minilm, neurons: 20, epochs: 50, fold: 3, acc: 0.7949, time: 107\n",
-      "col: title+desc, model: minilm, neurons: 20, epochs: 50, fold: 4, acc: 0.7853, time: 107\n",
-      "total time: 571\n",
+      "col: title+desc, model: minilm, neurons: 20, epochs: 50, fold: 0, acc: 0.7586, time: 77\n",
+      "col: title+desc, model: minilm, neurons: 20, epochs: 50, fold: 1, acc: 0.7543, time: 77\n",
+      "col: title+desc, model: minilm, neurons: 20, epochs: 50, fold: 2, acc: 0.7069, time: 77\n",
+      "col: title+desc, model: minilm, neurons: 20, epochs: 50, fold: 3, acc: 0.7403, time: 77\n",
+      "col: title+desc, model: minilm, neurons: 20, epochs: 50, fold: 4, acc: 0.7489, time: 77\n",
+      "total time: 396\n",
       "\n",
-      "col: title+desc, model: mpnet, neurons: 28, epochs: 50, fold: 0, acc: 0.8237, time: 252\n",
-      "col: title+desc, model: mpnet, neurons: 28, epochs: 50, fold: 1, acc: 0.8237, time: 252\n",
-      "col: title+desc, model: mpnet, neurons: 28, epochs: 50, fold: 2, acc: 0.8173, time: 252\n",
-      "col: title+desc, model: mpnet, neurons: 28, epochs: 50, fold: 3, acc: 0.7981, time: 252\n",
-      "col: title+desc, model: mpnet, neurons: 28, epochs: 50, fold: 4, acc: 0.8109, time: 252\n",
-      "total time: 1275\n",
+      "col: title+desc, model: mpnet, neurons: 28, epochs: 50, fold: 0, acc: 0.7629, time: 182\n",
+      "col: title+desc, model: mpnet, neurons: 28, epochs: 50, fold: 1, acc: 0.7974, time: 182\n",
+      "col: title+desc, model: mpnet, neurons: 28, epochs: 50, fold: 2, acc: 0.7543, time: 182\n",
+      "col: title+desc, model: mpnet, neurons: 28, epochs: 50, fold: 3, acc: 0.8095, time: 182\n",
+      "col: title+desc, model: mpnet, neurons: 28, epochs: 50, fold: 4, acc: 0.7706, time: 202\n",
+      "total time: 948\n",
       "\n"
      ]
     }
@@ -474,25 +472,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# read the files generated by the grid search and put results on a table\u001b[39;00m\n\u001b[1;32m      2\u001b[0m keras_columns \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mmodel_type\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mhidden_neurons\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mepochs\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mcv_score\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mcv_time\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mtrainable_params\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m----> 3\u001b[0m df_results_keras \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(columns\u001b[39m=\u001b[39mkeras_columns)\n\u001b[1;32m      5\u001b[0m \u001b[39mfor\u001b[39;00m file_path \u001b[39min\u001b[39;00m \u001b[39msorted\u001b[39m(os\u001b[39m.\u001b[39mlistdir(\u001b[39m'\u001b[39m\u001b[39mresults_hf\u001b[39m\u001b[39m'\u001b[39m)):\n\u001b[1;32m      6\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(\u001b[39m'\u001b[39m\u001b[39mresults_hf\u001b[39m\u001b[39m'\u001b[39m, file_path), \u001b[39m'\u001b[39m\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# read the files generated by the grid search and put results on a table\n",
-    "keras_columns = ['model_type', 'hidden_neurons', 'epochs', 'cv_score', 'cv_time', 'trainable_params']\n",
-    "df_results_keras = pd.DataFrame(columns=keras_columns)\n",
+    "torch_columns = ['model_type', 'hidden_neurons', 'epochs', 'cv_score', 'cv_time', 'trainable_params']\n",
+    "df_results_torch = pd.DataFrame(columns=torch_columns)\n",
     "\n",
     "for file_path in sorted(os.listdir('results_hf')):\n",
     "    with open(os.path.join('results_hf', file_path), 'r') as f:\n",
@@ -500,13 +486,13 @@
     "        results = f.read()\n",
     "        cv_score, cv_time, trainable_params = results.split(' ')\n",
     "        data = parameters + [float(cv_score), float(cv_time), float(trainable_params)]\n",
-    "        df_row = pd.DataFrame(data=[data], columns=keras_columns)\n",
-    "        df_results_keras = pd.concat([df_results_keras, df_row])"
+    "        df_row = pd.DataFrame(data=[data], columns=torch_columns)\n",
+    "        df_results_torch = pd.concat([df_results_torch, df_row])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,46 +503,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df_results_keras' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# group by each parameter\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[39mprint\u001b[39m(df_results_keras\u001b[39m.\u001b[39mgroupby([\u001b[39m'\u001b[39m\u001b[39mmodel_type\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mhidden_neurons\u001b[39m\u001b[39m'\u001b[39m])[[\u001b[39m'\u001b[39m\u001b[39mcv_score\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mparams\u001b[39m\u001b[39m'\u001b[39m]]\u001b[39m.\u001b[39mmean()\u001b[39m.\u001b[39mapply(format_params, axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\u001b[39m.\u001b[39mreset_index()\u001b[39m.\u001b[39mto_markdown(index\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df_results_keras' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# group by each parameter\n",
-    "print(df_results_keras.groupby(['model_type', 'hidden_neurons'])[['cv_score', 'params']].mean().apply(format_params, axis=1).reset_index().to_markdown(index=False))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| model_type   |   cv_score |   cv_time | trainable_params   |\n",
-      "|:-------------|-----------:|----------:|:-------------------|\n",
-      "| duse         |     0.7827 |       143 | 0.01 M             |\n",
-      "| labse        |     0.7833 |       550 | 0.02 M             |\n",
-      "| minilm       |     0.7942 |       112 | 0.01 M             |\n",
-      "| mpnet        |     0.8147 |       252 | 0.02 M             |\n"
+      "| model_type   |   hidden_neurons |   cv_score | trainable_params   |\n",
+      "|:-------------|-----------------:|-----------:|:-------------------|\n",
+      "| duse         |               24 |     0.7668 | 135 M              |\n",
+      "| labse        |               28 |     0.7643 | 471 M              |\n",
+      "| minilm       |               20 |     0.7418 | 117 M              |\n",
+      "| mpnet        |               28 |     0.7789 | 278 M              |\n"
      ]
     }
    ],
    "source": [
-    "print(df_results_keras.groupby(['model_type'])[['cv_score', 'params']].mean().apply(format_params, axis=1).to_markdown())"
+    "# group by each parameter\n",
+    "print(df_results_torch.groupby(['model_type', 'hidden_neurons'])[['cv_score', 'trainable_params']].mean().apply(format_params, axis=1).reset_index().to_markdown(index=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| model_type   |   cv_score | trainable_params   |\n",
+      "|:-------------|-----------:|:-------------------|\n",
+      "| duse         |     0.7668 | 135 M              |\n",
+      "| labse        |     0.7643 | 471 M              |\n",
+      "| minilm       |     0.7418 | 117 M              |\n",
+      "| mpnet        |     0.7789 | 278 M              |\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_results_torch.groupby(['model_type'])[['cv_score', 'trainable_params']].mean().apply(format_params, axis=1).to_markdown())"
    ]
   }
  ],
